--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,2 +1,6 @@
 ---
-message: "This node is using common data"
+profile::ntp::ntp_servers: 
+  - 0.centos.pool.ntp.org
+  - 1.centos.pool.ntp.org
+  - 2.centos.pool.ntp.org
+profile::apache::default_vhost: false
